--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vuetify": "^3.11.8"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@tsconfig/node24": "^24.0.4",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^24.10.13",
