--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "~5.9.3",
     "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.6",
+    "vite-plugin-vuetify": "^2.1.3",
     "vitest": "^4.0.18",
     "vue-tsc": "^3.2.4"
   },
