--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@vueuse/core": "^14.2.1",
+    "axios": "^1.13.6",
     "pinia": "^3.0.4",
     "vue": "^3.5.28",
+    "vue-router": "^4.6.4",
     "vuetify": "^3.11.8"
   },
   "devDependencies": {
