--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@vueuse/core": "^14.2.1",
     "axios": "^1.13.6",
+    "json-server": "^1.0.0-beta.12",
     "pinia": "^3.0.4",
     "vue": "^3.5.28",
     "vue-router": "^4.6.4",
