--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "news-project",
   "version": "0.0.0",
+  "homepage": "https://zayatsmaxim.github.io/news-project",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test:unit": "vitest",
     "coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
@@ -42,6 +45,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-oxlint": "~1.46.0",
     "eslint-plugin-vue": "~10.8.0",
+    "gh-pages": "^6.3.0",
     "jiti": "^2.6.1",
     "jsdom": "^28.1.0",
     "npm-run-all2": "^8.0.4",
