--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost:3000
+VITE_API_BASE_URL=https://json-server-3am6.onrender.com
 VITE_API_AUTH_URL=https://dummyjson.com/auth
